docs: comprehensive Chinese README + MIT LICENSE